--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "fastify-static": "^4.5.0"
+    "fastify-static": "^4.5.0",
+    "point-of-view": "^5.0.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "standard": "^11.0.1",
