--- a/html/package.json
+++ b/html/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "sass": "^1.45.2",
     "vite": "^2.7.2"
   },
   "dependencies": {
