--- a/html/package.json
+++ b/html/package.json
@@ -13,6 +13,8 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
+    "@material/button": "^13.0.0",
+    "@material/icon-button": "^13.0.0",
     "htmx.org": "^1.6.1",
     "material-icons": "^1.10.4"
   }
