--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.14.0",
+    "fastify-formbody": "^5.2.0",
+    "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
     "fastify-static": "^4.5.0",
