--- a/html/package.json
+++ b/html/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material/button": "^13.0.0",
     "@material/icon-button": "^13.0.0",
+    "@material/textfield": "^13.0.0",
     "htmx.org": "^1.6.1",
     "material-icons": "^1.10.4"
   }
