--- a/package.json
+++ b/package.json
@@ -28,16 +28,12 @@
     "fastify": "^3.0.0",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.14.0",
-    "fastify-cookie": "^5.5.0",
     "fastify-formbody": "^5.2.0",
     "fastify-mailer": "^2.2.0",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
-    "fastify-static": "^4.5.0",
-    "nodemailer": "^6.7.2",
-    "point-of-view": "^5.0.0",
-    "pug": "^3.0.2"
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "standard": "^11.0.1",
