--- a/vite/package.json
+++ b/vite/package.json
@@ -10,5 +10,8 @@
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "vite": "^2.7.2"
+  },
+  "dependencies": {
+    "dev-htmx": "^0.1.0"
   }
 }
