--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "homepage": "https://github.com/wscherphof/fastify-htmxample#readme",
   "dependencies": {
-    "fastify": "^3.0.0",
+    "fastify": "^3.25.3",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.14.0",
-    "fastify-cookie-auth": "^0.1.0",
+    "fastify-cookie": "^5.5.0",
+    "fastify-cookie-auth": "^0.2.0",
     "fastify-crypto": "^0.1.0",
     "fastify-formbody": "^5.2.0",
     "fastify-htmx": "^0.1.0",
@@ -37,7 +38,7 @@
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
     "nodemailer": "^6.7.2",
-    "pug-material-design": "^0.1.0"
+    "pug-material-design": "^0.1.1"
   },
   "devDependencies": {
     "standard": "^11.0.1",
