--- a/vite/package.json
+++ b/vite/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "sass": "^1.47.0",
     "vite": "^2.7.2"
   },
   "dependencies": {
