--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "pretest": "standard",
     "test": "tap \"test/**/*.test.js\"",
-    "start": "fastify start -l info app.js",
+    "start": "cd vite && npm install && npm run build && cd .. && fastify start -l info app.js",
     "dev": "fastify start -w -l info -P app.js",
-    "lint": "standard --fix",
-    "build": "cd vite && npm install && npm run build && cd .."
+    "lint": "standard --fix"
   },
   "keywords": [],
   "repository": {
