--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.0",
+    "netlify-lambda": "^2.0.15",
     "nodemailer": "^6.7.2",
     "pug-material-design": "^0.1.1"
   },
