--- a/.github/workflows/main_fastify-htmxample-eu.yml
+++ b/.github/workflows/main_fastify-htmxample-eu.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: "16.x"
 
       - name: npm install, build, and test
         run: |
@@ -27,17 +27,20 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Zip artifact before uploading
+        run: zip -r artifact.zip *
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: artifact.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -46,11 +49,14 @@ jobs:
         with:
           name: node-app
 
-      - name: 'Deploy to Azure Web App'
+      - name: Unzip artifact after downloading
+        run: unzip artifact.zip
+
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'fastify-htmxample-eu'
-          slot-name: 'Production'
+          app-name: "fastify-htmxample-eu"
+          slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_19664D0E1C7F4D128E078DCCA53AF0A3 }}
           package: .
