--- a/vite/package.json
+++ b/vite/package.json
@@ -5,15 +5,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "lint": "standard --fix"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
-    "sass": "^1.48.0",
+    "standard": "^16.0.4",
     "vite": "^2.7.12"
   },
   "dependencies": {
-    "dev-htmx": "^0.1.0"
+    "dev-htmx": "^0.1.1"
   }
 }
