fix in dev-htmx, fix azure build, login textButton

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "fastify start -l info app.js",
     "dev": "fastify start -w -l info -P app.js",
     "lint": "standard --fix",
-    "postinstall": "(cd vite && npm install --unsafe-perm)"
+    "postinstall": "(cd vite && npm install --unsafe-perm --production=false)"
   },
   "keywords": [],
   "repository": {
