--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fastify-mailer": "^2.2.0",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
+    "fastify-rate-limit": "^5.7.0",
     "fastify-sensible": "^3.1.0",
     "nodemailer": "^6.7.2",
     "pug-material-design": "^0.1.4"
