--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fastify-formbody": "^5.2.0",
     "fastify-htmx": "^0.3.0",
     "fastify-mailer": "^2.2.0",
+    "fastify-method-override": "^1.5.6",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-rate-limit": "^5.7.0",
