--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "fastify": "^3.25.3",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.14.0",
-    "fastify-cookie-auth": "^0.4.0",
+    "fastify-cookie": "^5.5.0",
+    "fastify-cookie-auth": "^0.6.0",
     "fastify-crypto": "^0.1.0",
     "fastify-formbody": "^5.2.0",
+    "fastify-htmx": "^0.7.0",
     "fastify-mailer": "^2.2.0",
     "fastify-method-override": "^1.5.6",
     "fastify-mongodb": "^4.1.1",
