--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "test"
   },
   "scripts": {
-    "pretest": "standard",
+    "eslint": "eslint --ignore-path .gitignore .",
+    "prettier": "prettier --ignore-path .gitignore .",
+    "lint": "npm run eslint -- --fix && npm run prettier -- --write",
+    "pretest": "npm run eslint && npm run prettier -- --check",
     "test": "tap \"test/**/*.test.js\" --no-check-coverage",
     "start": "fastify start -l info app.js",
     "dev": "fastify start -w -l info -P app.js",
-    "lint": "standard --fix",
-    "postinstall": "(cd vite && npm install --unsafe-perm --production=false)"
+    "postinstall": "(cd vite && npm install --unsafe-perm --production=false)",
+    "prepare": "husky install"
   },
   "keywords": [],
   "repository": {
@@ -44,7 +47,14 @@
     "pug-material-design": "^0.1.7"
   },
   "devDependencies": {
-    "standard": "^11.0.1",
-    "tap": "^15.0.9"
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "tap": "^15.0.9",
+    "husky": "^7.0.0"
   }
 }
