--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "prepare": "husky install",
     "eslint": "eslint --ignore-path .gitignore .",
     "prettier": "prettier --ignore-path .gitignore .",
     "lint": "npm run eslint -- --fix && npm run prettier -- --write",
@@ -14,8 +15,7 @@
     "test": "tap \"test/**/*.test.js\" --no-check-coverage",
     "start": "fastify start -l info app.js",
     "dev": "fastify start -w -l info -P app.js",
-    "postinstall": "(cd vite && npm install --unsafe-perm --production=false)",
-    "prepare": "husky install"
+    "postinstall": "(cd vite && npm install --unsafe-perm --production=false)"
   },
   "keywords": [],
   "repository": {
