--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pug-material-design": "^0.1.7"
   },
   "devDependencies": {
+    "husky": "^7.0.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.5.1",
@@ -54,7 +55,6 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "tap": "^15.0.9",
-    "husky": "^7.0.0"
+    "tap": "^15.0.9"
   }
 }
