--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "fastify": "^3.25.3",
     "fastify-autoload": "^3.3.1",
     "fastify-cli": "^2.14.0",
-    "fastify-cookie-auth": "^0.6.1",
-    "fastify-crypto": "^0.1.0",
+    "fastify-cookie-auth": "^0.6.3",
     "fastify-formbody": "^5.2.0",
-    "fastify-htmx": "^0.8.0",
+    "fastify-htmx": "^0.8.1",
     "fastify-mailer": "^2.2.0",
     "fastify-method-override": "^1.5.6",
     "fastify-mongodb": "^4.1.1",
@@ -44,14 +43,14 @@
     "fastify-rate-limit": "^5.7.0",
     "fastify-sensible": "^3.1.0",
     "nodemailer": "^6.7.2",
-    "pug-material-design": "^0.1.7"
+    "pug-material-design": "^0.1.8"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.19.2",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "2.5.1",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
