--- a/.github/workflows/main_fastify-htmxample-eu.yml
+++ b/.github/workflows/main_fastify-htmxample-eu.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: "16.x"
+          node-version: '16.x'
 
       - name: npm install, build, and test
         run: |
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Production"
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -52,12 +52,12 @@ jobs:
       - name: Unzip artifact after downloading
         run: unzip artifact.zip
 
-      - name: "Deploy to Azure Web App"
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "fastify-htmxample-eu"
-          slot-name: "Production"
+          app-name: 'fastify-htmxample-eu'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_19664D0E1C7F4D128E078DCCA53AF0A3 }}
           package: .
-          startup-command: "npm start"
+          startup-command: 'npm start'
