--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "fastify-formbody": "^5.2.0",
     "fastify-htmx": "^0.8.2",
     "fastify-mailer": "^2.2.0",
+    "fastify-mdc-pug": "^0.0.1",
     "fastify-method-override": "^1.5.6",
     "fastify-mongodb": "^4.1.1",
     "fastify-plugin": "^3.0.0",
     "fastify-rate-limit": "^5.7.0",
     "fastify-sensible": "^3.1.0",
-    "nodemailer": "^6.7.2",
-    "pug-material-design": "^0.1.11"
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.19.2",
